--- a/about.html
+++ b/about.html
@@ -49,19 +49,46 @@
       #site-footer .hf-nav{display:none !important}
     }
 
-    /* index専用 */
-    section{margin:60px auto}
-    h1,h2,h3{margin:0 0 20px;font-weight:700}
-    h1{font-size:36px;text-align:center}
-    h2{font-size:26px;border-left:4px solid #1976d2;padding-left:10px;margin-bottom:20px}
-    h3{font-size:20px;margin-bottom:10px}
-    p{margin:0 0 14px}
-    .lead{font-size:20px;text-align:center;margin-bottom:30px;color:#374151}
-    .card{background:#fff;padding:32px;border-radius:12px;box-shadow:0 2px 10px rgba(0,0,0,.08);margin-bottom:30px}
-    .topics ul{list-style:none;padding:0}
-    .topics li{margin-bottom:12px;border-bottom:1px solid #e5e7eb;padding-bottom:8px}
-    .cta{text-align:center;margin-top:40px}
-    .cta a{display:inline-block;padding:12px 28px;background:#1976d2;color:#fff;border-radius:8px;text-decoration:none}
+    /* about専用 */
+    .about-section {
+      background: linear-gradient(135deg, #f8fafc, #eef2ff);
+      padding: 2rem;
+      border-radius: 1rem;
+    }
+    .about-title {
+      font-size: 2rem;
+      font-weight: 700;
+      color: #1e3a8a;
+      margin-bottom: 1rem;
+    }
+    .about-lead {
+      font-size: 1.1rem;
+      color: #334155;
+      line-height: 1.7;
+      margin-bottom: 1rem;
+    }
+    .about-info.card {
+      margin-top: 2rem;
+      background: #ffffff;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      border-radius: 0.75rem;
+      padding: 1.5rem;
+    }
+    .about-info table {
+      width: 100%;
+      border-collapse: collapse;
+    }
+    .about-info th {
+      text-align: left;
+      color: #475569;
+      padding: 0.5rem;
+      width: 30%;
+    }
+    .about-info td {
+      padding: 0.5rem;
+      color: #1e293b;
+    }
+
   </style>
 </head>
 <body>
