--- a/admin-pages.html
+++ b/admin-pages.html
@@ -1,89 +1,69 @@
-
+ 
 <!DOCTYPE html>
 <html lang="ja">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ページ管理</title>
+  <title>ページ編集</title>
   <style>
     body {
+      font-family: 'Segoe UI', sans-serif;
       margin: 0;
-      font-family: sans-serif;
-      display: flex;
-      height: 100vh;
+      background: #f8fafc;
+      color: #1e293b;
     }
-    .sidebar {
-      width: 250px;
+    header {
       background: #1e293b;
       color: #fff;
-      display: flex;
-      flex-direction: column;
-    }
-    .sidebar h2 {
       padding: 1rem;
-      margin: 0;
+      text-align: center;
       font-size: 1.2rem;
-      background: #334155;
+      font-weight: bold;
     }
-    .sidebar ul {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-      flex-grow: 1;
-      overflow-y: auto;
+    main {
+      max-width: 1000px;
+      margin: 2rem auto;
+      background: #fff;
+      padding: 2rem;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     }
-    .sidebar li {
-      padding: 0.8rem 1rem;
-      cursor: pointer;
+    h2 {
+      margin-top: 0;
+      color: #334155;
     }
-    .sidebar li:hover, .sidebar li.active {
-      background: #475569;
+    label {
+      display: block;
+      margin: 1rem 0 0.5rem;
+      font-weight: bold;
     }
-    .sidebar button {
-      margin: 1rem;
-      padding: 0.5rem;
-      background: #3b82f6;
-      border: none;
-      border-radius: 4px;
-      color: #fff;
-      cursor: pointer;
-    }
-    .main {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
-      background: #f8fafc;
-    }
-    .editor {
-      flex-grow: 1;
-      padding: 1rem;
-      overflow-y: auto;
-    }
-    .editor input, .editor textarea, .editor select {
+    select, input, textarea, button {
       width: 100%;
-      padding: 0.5rem;
-      margin: 0.5rem 0;
+      padding: 0.6rem;
+      margin-bottom: 1rem;
       border: 1px solid #cbd5e1;
       border-radius: 4px;
+      font-size: 1rem;
     }
-    .section {
-      background: #fff;
-      border: 1px solid #e2e8f0;
+    button {
+      background: #3b82f6;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+    }
+    button:hover {
+      background: #2563eb;
+    }
+    .editor-area {
+      border: 2px dashed #cbd5e1;
       border-radius: 6px;
-      padding: 1rem;
-      margin-bottom: 1rem;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-    }
-    .preview {
-      border-top: 1px solid #e2e8f0;
-      padding: 1rem;
-      background: #fff;
-      max-height: 300px;
-      overflow-y: auto;
+      padding: 2rem;
+      text-align: center;
+      color: #94a3b8;
+      margin-bottom: 2rem;
     }
     .generated {
-      border-top: 1px solid #e2e8f0;
-      padding: 1rem;
+      margin-top: 2rem;
     }
     textarea.generated-code {
       width: 100%;
@@ -91,134 +71,70 @@
       font-family: monospace;
       font-size: 0.9rem;
     }
+    .copy-btn {
+      margin-top: 0.5rem;
+      background: #10b981;
+    }
+    .copy-btn:hover {
+      background: #059669;
+    }
   </style>
 </head>
 <body>
-  <div class="sidebar">
-    <h2>ページ一覧</h2>
-    <ul id="page-list"></ul>
-    <button onclick="createPage()">新規ページ作成</button>
-  </div>
-  <div class="main">
-    <div class="editor">
-      <h2>ページ編集</h2>
-      <input id="page-title" placeholder="ページタイトル">
-      <input id="page-slug" placeholder="スラッグ (URL名)">
-      <div id="sections"></div>
-      <button onclick="addSection()">セクション追加</button>
+  <header>ページ編集</header>
+  <main>
+    <h2>ページ選択</h2>
+    <label for="page-select">編集するページを選んでください</label>
+    <select id="page-select">
+      <option value="">-- ページを選択 --</option>
+      <!-- Supabaseからpublic_menusを読み込んでここに反映予定 -->
+    </select>
+
+    <h2>編集エリア</h2>
+    <div class="editor-area" id="editor-area">
+      ここにブロックが追加されます（デザインのみのダミー）
     </div>
-    <div class="preview" id="preview">
-      <h3>プレビュー</h3>
-      <div id="preview-content"></div>
-    </div>
+
     <div class="generated">
-      <h3>HTML生成</h3>
+      <h2>HTML生成</h2>
       <button onclick="generateHTML()">生成する</button>
+      <button class="copy-btn" onclick="copyCode()">コピー</button>
       <textarea id="generated-code" class="generated-code" readonly></textarea>
     </div>
-  </div>
+  </main>
 
   <script>
-    let pages = [];
-    let currentPage = null;
+    // 将来的にSupabaseからpublic_menusを取得する予定
+    const dummyMenus = [
+      {id:1, title:"トップ", url:"index.html"},
+      {id:2, title:"会社概要", url:"about.html"},
+      {id:3, title:"事業内容", url:"service.html"},
+      {id:4, title:"ブログ", url:"blog.html"},
+      {id:5, title:"お問い合わせ", url:"contact.html"},
+      {id:6, title:"プライバシーポリシー", url:"privacypolicy.html"}
+    ];
 
-    function renderPages(){
-      const list = document.getElementById('page-list');
-      list.innerHTML = '';
-      pages.forEach((p,i)=>{
-        const li = document.createElement('li');
-        li.textContent = p.title || '無題ページ';
-        li.className = (currentPage===i)?'active':'';
-        li.onclick=()=>{currentPage=i;renderEditor();};
-        list.appendChild(li);
+    window.onload = () => {
+      const select = document.getElementById("page-select");
+      dummyMenus.forEach(m => {
+        const opt = document.createElement("option");
+        opt.value = m.id;
+        opt.textContent = m.title + " (" + m.url + ")";
+        select.appendChild(opt);
       });
-    }
-
-    function createPage(){
-      pages.push({title:'新しいページ',slug:'',sections:[]});
-      currentPage = pages.length-1;
-      renderPages();
-      renderEditor();
-    }
-
-    function renderEditor(){
-      if(currentPage===null) return;
-      const p = pages[currentPage];
-      document.getElementById('page-title').value = p.title;
-      document.getElementById('page-slug').value = p.slug;
-      const secDiv=document.getElementById('sections');
-      secDiv.innerHTML='';
-      p.sections.forEach((s,idx)=>{
-        const div=document.createElement('div');
-        div.className='section';
-        div.innerHTML=`
-          <select onchange="updateSectionType(${idx}, this.value)">
-            <option value="heading" ${s.type==='heading'?'selected':''}>見出し</option>
-            <option value="text" ${s.type==='text'?'selected':''}>テキスト</option>
-          </select>
-          <textarea placeholder="内容を入力" oninput="updateSectionContent(${idx}, this.value)">${s.content}</textarea>
-          <button onclick="deleteSection(${idx})">削除</button>
-        `;
-        secDiv.appendChild(div);
-      });
-    }
-
-    function addSection(){
-      if(currentPage===null) return;
-      pages[currentPage].sections.push({type:'text',content:''});
-      renderEditor();
-    }
-
-    function updateSectionType(idx,val){
-      pages[currentPage].sections[idx].type=val;
-    }
-    function updateSectionContent(idx,val){
-      pages[currentPage].sections[idx].content=val;
-      renderPreview();
-    }
-    function deleteSection(idx){
-      pages[currentPage].sections.splice(idx,1);
-      renderEditor();
-      renderPreview();
-    }
-
-    function renderPreview(){
-      if(currentPage===null) return;
-      const pc = document.getElementById('preview-content');
-      pc.innerHTML = pages[currentPage].sections.map(s=>{
-        if(s.type==='heading') return `<h2>${s.content}</h2>`;
-        if(s.type==='text') return `<p>${s.content}</p>`;
-        return '';
-      }).join('');
-    }
+    };
 
     function generateHTML(){
-      if(currentPage===null) return;
-      const p = pages[currentPage];
-      const html = `<!DOCTYPE html>
-<html lang="ja">
-<head><meta charset="UTF-8"><title>${p.title}</title></head>
-<body>
-<header><!-- ヘッダーここに挿入 --></header>
-<main>${p.sections.map(s=>{
-  if(s.type==='heading') return '<h2>'+s.content+'</h2>';
-  if(s.type==='text') return '<p>'+s.content+'</p>';
-  return '';
-}).join('')}</main>
-<footer><!-- フッターここに挿入 --></footer>
-</body></html>`;
-      document.getElementById('generated-code').value=html;
+      const code = "<!-- ここに選択したページのHTMLが生成されます -->";
+      document.getElementById("generated-code").value = code;
     }
 
-    document.getElementById('page-title').oninput=function(){
-      if(currentPage===null) return;
-      pages[currentPage].title=this.value;
-      renderPages();
-    };
-    document.getElementById('page-slug').oninput=function(){
-      if(currentPage===null) return;
-      pages[currentPage].slug=this.value;
-    };
+    function copyCode(){
+      const textarea = document.getElementById("generated-code");
+      textarea.select();
+      document.execCommand("copy");
+      alert("コピーしました！");
+    }
   </script>
 </body>
 </html>
